--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,6 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta property="og:url" content="http://www.dinhtq.vn" />
+    <meta property="og:type" content="countdown" />
+    <meta property="og:title" content="Countdown Happy New Year" />
+    <meta property="og:description" content="Chúc mừng năm mới 2023 " />
+    <meta
+      property="og:image"
+      content="http://static01.nyt.com/images/2015/02/19/arts/international/19iht-btnumbers19A/19iht-btnumbers19A-facebookJumbo-v2.jpg"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -21,9 +29,11 @@
     <div class="title">
       <h3 class="STARDUST1">2023</h3>
       <h1 class="STARDUST2">TRAN QUANG DINH</h1>
+
       <h3 class="STARDUST3">
         H A P P Y <strong>❤</strong> N E W <strong>❤</strong> Y E A R
       </h3>
+
       <div class="container-fluid">
         <h2>Count Down</h2>
 
