--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
     <meta property="og:description" content="Chúc mừng năm mới 2023 " />
     <meta
       property="og:image"
-      content="http://static01.nyt.com/images/2015/02/19/arts/international/19iht-btnumbers19A/19iht-btnumbers19A-facebookJumbo-v2.jpg"
+      content="https://dinhtq.vn/images/coun-down.jpg"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
