update seo site

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,10 +2,36 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1"
+    />
+    <meta httpEquiv="X-UA-Compatible" content="IE=edge" />
     <meta property="og:url" content="http://www.dinhtq.vn" />
     <meta property="og:type" content="countdown" />
     <meta property="og:title" content="Countdown Happy New Year" />
     <meta property="og:description" content="Chúc mừng năm mới 2023 " />
+
+    <meta name="theme-color" content="#e60000" />
+    <meta name="description" content="Chúc mừng năm mới 2023 " />
+    <meta name="keywords" content="Countdown" />
+    <meta name="robots" content="index, follow" />
+    <meta name="author" content="Tran Dinh" />
+    <meta name="copyright" content="Tran Dinh" />
+    <meta property="og:title" content="Countdown chúc mừng năm mới" />
+    <meta property="og:description" content="Chúc mừng năm mới 2023 " />
+    <meta property="og:url" content="http://www.dinhtq.vn" />
+    <meta property="og:site_name" content="Tran Dinh" />
+    <meta
+      property="og:image"
+      content="https://dinhtq.vn/images/coun-down.jpg"
+    />
+    <meta
+      property="og:image:secure_url"
+      content="https://dinhtq.vn/images/coun-down.jpg"
+    />
+    <meta property="og:image:width" content="1920" />
+    <meta property="og:image:height" content="960" />
     <meta
       property="og:image"
       content="https://dinhtq.vn/images/coun-down.jpg"
